Bug #24022
"ceph tell osd.x bench" writes resulting JSON to stderr instead of stdout.
Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
-
Target version:
-
% Done:
0%
Source:
Tags:
Backport:
mimic, luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Related issues
History
#1 Updated by Марк Коренберг over 4 years ago
Maybe not only this command, but also some others.
#2 Updated by John Spray over 4 years ago
- Project changed from Ceph to RADOS
- Category deleted (
ceph cli) - Status changed from New to Fix Under Review
I tend to agree: https://github.com/ceph/ceph/pull/21905
#3 Updated by Kefu Chai over 4 years ago
- Status changed from Fix Under Review to Resolved
- Assignee set to John Spray
#4 Updated by Kefu Chai over 4 years ago
- Status changed from Resolved to 12
- Assignee deleted (
John Spray) - Target version deleted (
v12.2.5)
Марк i am leaving this ticket open. will close it once
But, I found the same bug about stdou/stderr for "debug dump_missing" and "getomap" commands
is addressed
#5 Updated by Kefu Chai over 4 years ago
#6 Updated by Марк Коренберг over 4 years ago
#7 Updated by Konstantin Shalygin over 4 years ago
luminous backport https://github.com/ceph/ceph/pull/23680
#8 Updated by Nathan Cutler over 4 years ago
- Status changed from 12 to Pending Backport
- Backport set to mimic, luminous
#9 Updated by Nathan Cutler over 4 years ago
- Copied to Backport #35941: luminous: "ceph tell osd.x bench" writes resulting JSON to stderr instead of stdout. added
#10 Updated by Nathan Cutler over 4 years ago
- Copied to Backport #35942: mimic: "ceph tell osd.x bench" writes resulting JSON to stderr instead of stdout. added
#11 Updated by Nathan Cutler over 4 years ago
- Status changed from Pending Backport to Resolved