osd: write "bench" output to stdout

...not stderr.  Seems more reasonable as this
command is essentially feeding back a measurement result,
rather than just commenting on its status

Fixes: http://tracker.ceph.com/issues/24022
Signed-off-by: John Spray <john.spray@redhat.com>
(cherry picked from commit 23583ccc25a33c1d997cff9d65a48569eac1392c)